--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ google-api-python-client==2.111.0
 # Utilities
 # ============================================================
 python-dateutil==2.8.2
-Pillow==10.1.0        # Image handling
+Pillow>=10.2.0        # Image handling (updated for Python 3.13 compatibility)
 bleach==6.1.0         # XSS protection/HTML sanitization
 MarkupSafe==2.1.3
 
