--- a/requirements.txt
+++ b/requirements.txt
@@ -72,8 +72,8 @@ flake8==7.0.0         # Linting
 autopep8==2.0.4
 
 # ============================================================
-# Deployment (Optional - for AWS/Cloud deployment)
+# Deployment (for AWS/Cloud deployment)
 # ============================================================
-# gunicorn==21.2.0    # Production WSGI server
+gunicorn==21.2.0    # Production WSGI server
 # psycopg2-binary==2.9.9  # If using PostgreSQL in production
 # boto3==1.34.10      # AWS SDK (for S3 file uploads)
